Closed
Bug 418961
Opened 15 years ago
Closed 15 years ago
"Save Page As" "Text Files" saves file but Downloads window doesn't show completion
Categories
(Toolkit :: Downloads API, defect, P2)
Toolkit
Downloads API
Tracking
()
VERIFIED
FIXED
mozilla1.9beta5
People
(Reporter: StenBiz, Assigned: Mardak)
References
()
Details
(Keywords: regression)
Attachments
(1 file)
1.24 KB,
patch
|
Biesinger
:
review+
Biesinger
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X 10.4; en-US; rv:1.9b4pre) Gecko/2008022104 Minefield/3.0b4pre Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X 10.4; en-US; rv:1.9b4pre) Gecko/2008022104 Minefield/3.0b4pre When commanding the "Text Files" option of "Save Page As", a correct text file is created, but the Downloads window shows the item as "Starting..." with no progress in the progress bar. Reproducible: Always Steps to Reproduce: 1. go to http://mozilla.org 2. command File> Save Page As, select "Text Files" in the popup menu in the dialog, use the default file name. 3. in the Downloads window, observe that this item appears with status "Starting..." and never progresses (bad). 4. open the saved file in a text editor (for example TextEdit). You will see that it has a representation of the page as a text file, with no obvious missing data. Actual Results: see above Expected Results: see above Not sure why this feature is called the plural "Text Files" - under what conditions would there be more than one file?
Comment 1•15 years ago
|
||
*ug* confirming :( No download file appears to be downloading either...
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•15 years ago
|
Assignee | ||
Comment 2•15 years ago
|
||
Similar to what we needed to do for exthandler.. set the NETWORK bit. All places in webbrowserpersist that have a STATE_START or STATE_STOP are able to send STATE_IS_NETWORK bit if necessary with this patch.
Assignee: nobody → edilee
Status: NEW → ASSIGNED
Attachment #305432 -
Flags: superreview?(cbiesinger)
Attachment #305432 -
Flags: review?(cbiesinger)
Assignee | ||
Comment 3•15 years ago
|
||
Here's a build with patch v1 applied: https://build.mozilla.org/tryserver-builds/2008-02-25_01:34-edward.lee@engineering.uiuc.edu-saveText.pimpDown.unescape.adaptive/ Bug 416446 - Make PluralForm more useful for extensions and delay importing strings for perf Bug 415460 - searching in places queries does not decode urls Bug 418961 - "Save Page As" "Text Files" saves file but Downloads window doesn't show completion Bug 401660 - when showing autocomplete result, show tags that partially match Bug 416211 - Tagged results don't show bookmark title when matching the tag Bug 405320 - support "out of order" multiple word tag search in the url bar and in the places organizer Bug 418920 - Allow multiple word search with tags in addition to title and url Bug 419068 - Allow tagged pages to mingle with non-tagged autocomplete results Bug 407946 - emphasize all matching text in title and url, not just the first match in title and url Bug 415403 - Show matches for all search words for location bar autocomplete Bug 395735 - Instrument the location bar auto-complete to report accuracy Bug 395739 - adaptive learning (match entered text to selected item) in url bar autocomplete Bug 392143 - show keywords as url bar autocomplete choices Bug 407204 - adjust the title and url text sizes Bug 406257 - reduce the number of rows in url bar autocomplete from 10 to 6 Bug 419324 - Edit bookmarks dialog doesn't unescape URLs Bug 419403 - Pimp My Download Manager Search! (multi word, match any text)
Updated•15 years ago
|
Flags: blocking-firefox3? → blocking-firefox3+
Priority: -- → P2
Assignee | ||
Updated•15 years ago
|
Whiteboard: [has patch][needs review biesi]
Assignee | ||
Updated•15 years ago
|
OS: Mac OS X → All
Hardware: Macintosh → All
Comment 5•15 years ago
|
||
biesi - any chance you'll get to this soon?
Whiteboard: [has patch][needs review biesi] → [has patch][needs review biesi][swag <1h]
Updated•15 years ago
|
Attachment #305432 -
Flags: superreview?(cbiesinger)
Attachment #305432 -
Flags: superreview+
Attachment #305432 -
Flags: review?(cbiesinger)
Attachment #305432 -
Flags: review+
Assignee | ||
Comment 6•15 years ago
|
||
Checking in embedding/components/webbrowserpersist/src/nsWebBrowserPersist.cpp; /cvsroot/mozilla/embedding/components/webbrowserpersist/src/nsWebBrowserPersist.cpp,v <-- nsWebBrowserPersist.cpp new revision: 1.136; previous revision: 1.135 done
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-litmus?
Resolution: --- → FIXED
Whiteboard: [has patch][needs review biesi][swag <1h]
Target Milestone: --- → Firefox 3 beta5
Comment 7•15 years ago
|
||
Verified FIXED using: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en-US; rv:1.9b5pre) Gecko/2008030904 Minefield/3.0b5pre Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b5pre) Gecko/2008030904 Minefield/3.0b5pre -and- Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9b5pre) Gecko/2008030904 Minefield/3.0b5pre
Status: RESOLVED → VERIFIED
Comment 9•15 years ago
|
||
in-litmus+ https://litmus.mozilla.org/show_test.cgi?id=5205
Flags: in-litmus? → in-litmus+
Updated•15 years ago
|
Product: Firefox → Toolkit
You need to log in
before you can comment on or make changes to this bug.
Description
•