Bug 418961 - "Save Page As" "Text Files" saves file but Downloads window doesn't show completion. r=biesi, sr=biesi, b-ff3=beltzner